<resources>
    <string name="app_name" translatable="false">QrCode</string>
    <string name="bottom_scan">Scan</string>
    <string name="bottom_history">History</string>
    <string name="bottom_create">Create</string>
    <string name="bottom_settings">Settings</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="copy">Copy Link</string>
    <string name="tab_create">Create</string>
    <string name="tab_settings">Settings</string>
    <string name="call">Call</string>
    <string name="personal">Personal</string>
    <string name="add_contact">Add Contact</string>
    <string name="telephone">Telephone</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="message">Message</string>
    <string name="utilities">Utilities</string>
    <string name="text">Text</string>
    <string name="ch_play">CH Play</string>
    <string name="wifi">Wifi</string>
    <string name="location">Location</string>
    <string name="social">Social</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="tiktok">Tiktok</string>
    <string name="instagram">Instagram</string>
    <string name="telegram">Telegram</string>
    <string name="snapChat">Snapchat</string>
    <string name="discord">Discord</string>
    <string name="youtube">Youtube</string>
    <string name="language">Language</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_use">Term of Use</string>
    <string name="rate_app">Rate Application</string>
    <string name="english">English</string>
    <string name="spain">Spain</string>
    <string name="indonesia">Indonesia</string>
    <string name="portugal">Portugal</string>
    <string name="franch">Franch</string>
    <string name="china">China</string>
    <string name="create_qr">Create QR</string>
    <string name="link">Link</string>
    <string name="copied">copy successfully</string>
    <string name="created">Created QR</string>
    <string name="send">Send</string>
    <string name="connect">Connect</string>
    <string name="network_name">Network Name</string>
    <string name="password">Password</string>
    <string name="dialog_message">Are you sure</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="text_term_of_use" translatable="false">IGI Studio built QR Scanner as an Ad Supported app. This SERVICE is provided by IGI Studio at no cost and is intended for use as is. This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Document Scanner: Scan File unless otherwise defined in this Privacy Policy. Information Collection and Use For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way. The app does use third party services that may collect information used to identify you. Link to privacy policy of third party service providers used by the app Google Play Services AdMob Firebase Analytics Fabric Log Data I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics. Cookies Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory. This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. Service Providers I may employ third-party companies and individuals due to the following reasons: To facilitate our Service; To provide the Service on our behalf; To perform Service-related services; or To assist us in analyzing how our Service is used. I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose. Security I value your trust in providing us your Personal Information, thus we are striving to use commerciall</string>
    <string name="text_policy" translatable="false">IGI Studio built QR Scanner as an Ad Supported app. This SERVICE is provided by IGI Studio at no cost and is intended for use as is. This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service. If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Document Scanner: Scan File unless otherwise defined in this Privacy Policy. Information Collection and Use For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way. The app does use third party services that may collect information used to identify you. Link to privacy policy of third party service providers used by the app Google Play Services AdMob Firebase Analytics Fabric Log Data I want to inform you that whenever you use my Service, in a case of an error in the app I collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics. Cookies Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\' internal memory. This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service. Service Providers I may employ third-party companies and individuals due to the following reasons: To facilitate our Service; To provide the Service on our behalf; To perform Service-related services; or To assist us in analyzing how our Service is used. I want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose. Security I value your trust in providing us your Personal Information, thus we are striving to use commerciall</string>
    <string name="text_telephone">*Type phone number, that you want to encode as a QR code. When someone scans that code, he will be asked to perform a phone call to that number.</string>
    <string name="text_email">*Type email address, that you want to encode as a QR code. When someon scans that code, mail app will be opened with this address as a recepient.</string>
    <string name="text_message">*Type Message, that you want to encode as a QR code. When someone scans that code, he will see that message.</string>
    <string name="text_website">*Type link, that you want to encode as a QR code. When someon scans that code, he will open to that website.</string>
    <string name="text_text">*Type text, that you want to encode as a QR code. When someone scans that code, he will see that text.</string>
    <string name="text_ch_play">*Paste a link to CH Play to encode in QR code. When user scans such code, CH Play app will be opened.</string>
    <string name="text_wifi">*Type Wi-fi network data to encode it into QR code. When someone scans such code, he will be able to connect to that network.</string>
    <string name="text_location">*Select location, that you want to encode as a QR code. When someone scans that code, Maps app will be opened with this location as a center.</string>
    <string name="text_twitter">*Paste a link to Twitter to encode in QR code. When user scans such code, Twitter app will be opened.</string>
    <string name="text_facebook">*Paste a link to Facebook to encode in QR code. When user scans such code, Facebook app will be opened.</string>
    <string name="text_tiktok">*Paste a link to TikTok to encode in QR code. When user scans such code, TikTok app will be opened.</string>
    <string name="text_instagram">*Type Instagram number, that you want to encode as a QR code. When someone scans that code, he will be asked to perform a Instagram call to that number.</string>
    <string name="text_telegram">*Type Telegram number, that you want to encode as a QR code. When someone scans that code, he will be asked to perform a Telegram call to that number.</string>
    <string name="text_snapchat">*Type SnapChat number, that you want to encode as a QR code. When someone scans that code, he will be asked to perform a SnapChat call to that number.</string>
    <string name="text_discord">*Paste a link to Discord to encode in QR code. When user scans such code, Discord app will be opened.</string>
    <string name="text_youtube">*Paste a link to YouTube to encode in QR code. When user scans such code, YouTube app will be opened.</string>
    <string name="title_telephone">Telephone Number:</string>
    <string name="title_email">Email:</string>
    <string name="title_message">Message:</string>
    <string name="title_text">Text:</string>
    <string name="title_ch_play">Link Store:</string>
    <string name="title_twitter">Link Twitter:</string>
    <string name="title_facebook">Link Facebook:</string>
    <string name="title_tiktok">Link Tiktok:</string>
    <string name="title_instagram">Link Instagram:</string>
    <string name="title_telegram">Link Telegram:</string>
    <string name="title_snapchat">Link SnapChat:</string>
    <string name="title_discord">Account:</string>
    <string name="title_youtube">Link Youtube:</string>
    <string name="title_longitude">Longitude:</string>
    <string name="title_latitude">Latitude:</string>
    <string name="title_network_name">Network Name:</string>
</resources>