<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:background="#efefef"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/title"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_centerInParent="true"
                android:text="@string/create_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/text"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/link_result"
            android:layout_marginTop="20dp"
            android:textStyle="normal"
            android:padding="10dp"
            android:textSize="23sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"/>

        <ImageView
            android:id="@+id/img_result"
            android:src="@drawable/icon_qr_code"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="80dp"
            android:layout_height="80dp"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_share"
                        android:layout_gravity="center"
                        android:padding="18dp"
                        android:background="@drawable/bg_circle"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_share_blue"
                        android:layout_width="60dp"
                        android:layout_height="60dp"/>

                    <TextView
                        android:layout_marginTop="4dp"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_copy"
                        android:layout_gravity="center"
                        android:padding="18dp"
                        android:background="@drawable/bg_circle"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_copy"
                        android:layout_width="60dp"
                        android:layout_height="60dp"/>

                    <TextView
                        android:layout_marginTop="4dp"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_download"
                        android:layout_gravity="center"
                        android:padding="18dp"
                        android:background="@drawable/bg_circle"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_download"
                        android:layout_width="60dp"
                        android:layout_height="60dp"/>

                    <TextView
                        android:layout_marginTop="4dp"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/img_open"
                        android:layout_gravity="center"
                        android:padding="18dp"
                        android:background="@drawable/bg_circle"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_open"
                        android:layout_width="60dp"
                        android:layout_height="60dp"/>

                    <TextView
                        android:layout_marginTop="4dp"
                        android:textStyle="normal"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/open"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>